fe :  fix inconsisten field detailanime &detail episode
